Description de ce que tu as fait

--- a/render.yaml
+++ b/render.yaml
@@ -6,17 +6,15 @@ services:
     buildCommand: |
       pip install -r requirements.txt
       python manage.py collectstatic --noinput
-      python manage.py migrate
-    startCommand: gunicorn recruitment_platform.wsgi:application
+    startCommand: gunicorn --config gunicorn.conf.py --bind 0.0.0.0:$PORT recruitment_platform.wsgi:application
     envVars:
       - key: DEBUG
-        value: "False"
+        value: false
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
-        fromSecret: DATABASE_URL
-      - key: REDIS_URL
-        fromSecret: REDIS_URL
-      - key: PYTHON_VERSION
-        value: 3.11.6
-    autoDeploy: true
+        fromDatabase:
+          name: neondb
+          property: connectionString
+      - key: CELERY_TASK_ALWAYS_EAGER
+        value: true
